[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/PAUSE.png" type="Texture" id=1]
[ext_resource path="res://Game_Pause.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Botones/BtnPlay.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Botones/BtnRetry.png" type="Texture" id=4]
[ext_resource path="res://Escenas/Botones/BtnMenu.png" type="Texture" id=5]

[node name="Game_Pause" type="Sprite"]

editor/display_folded = true
position = Vector2( 233.697, 303.809 )
scale = Vector2( 1.42683, 1.64507 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Btn_Play" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -72.0
margin_top = -10.0
margin_right = -35.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="Btn_Retry" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -15.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="Btn_Menu" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_top = -10.0
margin_right = 83.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="Btn_Play" to="." method="_on_Btn_Play_pressed"]

[connection signal="pressed" from="Btn_Retry" to="." method="_on_Btn_Retry_pressed"]

[connection signal="pressed" from="Btn_Menu" to="." method="_on_Btn_Menu_pressed"]


